# cgp-fn-rust-berlin-demo-2026-03

./: Cargo.toml  README.md  README.prompt.md
src/: cgp_fn.rs  cgp_fn_desugared.rs  cgp_fn_generic.rs  cgp_impl.rs  lib.rs  method.rs  monolithic_fn.rs  plain_fn.rs  plain_trait.rs  types.rs
src/contexts/: app.rs  embedded.rs  gcloud.rs  minimal.rs  mod.rs  smart.rs
